Bug 1066970 - Show 'calculating' during HTTP cache cleaning process in preferences window, r=michal